# csml

final-project-code/: fetch_stop_ridership.py  main.py  pyproject.toml  ridership_nn.py
final-project-code/light_rail_data/: cta_gtfs_stops.csv  feeds_metadata.csv  mbta_gtfs_stops.csv  stop_ridership.csv  uta_gtfs_stops.csv
