[project]
name = "final-project-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "censusgeocode>=0.5.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "rapidfuzz>=3.13.0",
    "requests>=2.32.5",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
]
